# nedlia

./: .env.example  .eslintrc.cjs  .eslintrc.js  .gitignore  .lintstagedrc.mjs  .pre-commit-config.yaml  .prettierrc.js  .swiftlint.yml  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  commitlint.config.js  nx.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  ruff.toml  sonar-project.properties
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  deploy.yml  pr-scope-check.yml  pr-title.yml  release-train.yml  sonarcloud.yml
.husky/: commit-msg  pre-commit
.nx/workspace-data/: eslint-2654242865465226088.hash  file-map.json  lockfile-nodes.hash  nx_files.nxt  parsed-lock-file.dependencies.json  parsed-lock-file.nodes.json  project-graph.json  source-maps.json
docs/: SOLID-PRINCIPLES.md  accessibility.md  api-standards.md  branching-strategy.md  caching-strategy.md  code-quality.md  data-architecture.md  data-retention.md  database-migrations.md  dependency-injection.md  deployment-orchestration.md  distributed-tracing.md  domain-model.md  dry-principles.md  error-handling-strategy.md  error-handling.md  feature-flags.md  getting-started.md  idempotency.md  incident-response.md  internationalization.md  logging-standards.md  observability.md  performance-guidelines.md  pull-request-guidelines.md  python-style-guide.md  rate-limiting.md  resilience-patterns.md  security-architecture.md  testing-strategy.md  typescript-style-guide.md
docs/adr/: 003-event-driven.md  006-cap-theorem-tradeoffs.md  007-fargate-microservices.md  README.md
nedlia-IaC/: README.md  terragrunt.hcl
nedlia-IaC/environments/dev/: env.hcl
nedlia-IaC/environments/production/: env.hcl
nedlia-IaC/environments/staging/: env.hcl  terragrunt.hcl
nedlia-IaC/environments/testing/: env.hcl
nedlia-IaC/modules/api-gateway/: main.tf
nedlia-IaC/modules/aurora/: main.tf
nedlia-IaC/modules/cognito/: main.tf
nedlia-IaC/modules/eventbridge/: main.tf
nedlia-IaC/modules/lambda/: main.tf
nedlia-IaC/modules/s3/: main.tf
nedlia-IaC/modules/sqs/: main.tf
nedlia-IaC/modules/vpc/: main.tf
nedlia-back-end/: README.md
nedlia-back-end/api/: README.md  pyproject.toml
nedlia-back-end/api/src/: main.py
nedlia-back-end/api/src/nedlia_api/: __init__.py
nedlia-back-end/python/: pyproject.toml
nedlia-back-end/services/: README.md  docker-compose.yml  init-db.sql  localstack-init.sh
nedlia-back-end/services/placement-service/: Dockerfile  README.md  pyproject.toml
nedlia-back-end/services/placement-service/src/: __init__.py  main.py
nedlia-back-end/services/placement-service/src/interface/: __init__.py
nedlia-back-end/services/placement-service/src/interface/routes/: health.py  placements.py
nedlia-back-end/shared/: README.md  project.json  pyproject.toml
nedlia-back-end/shared/src/nedlia_shared/: __init__.py
nedlia-back-end/workers/: README.md  pyproject.toml
nedlia-back-end/workers/src/nedlia_workers/: __init__.py
nedlia-front-end/: README.md
nedlia-front-end/portal/: .prettierrc  README.md  eslint.config.js  index.html  package.json  project.json  tailwind.config.ts  tsconfig.json  vite.config.ts
nedlia-front-end/portal/src/: App.tsx  main.tsx
nedlia-plugin/: README.md
nedlia-plugin/davinci/: README.md
nedlia-plugin/finalcut/: README.md
nedlia-plugin/lumafusion/: README.md
nedlia-sdk/: README.md
nedlia-sdk/javascript/: README.md  project.json
nedlia-sdk/js/: package.json  project.json  tsconfig.json
nedlia-sdk/python/: README.md  pyproject.toml
nedlia-sdk/python/src/nedlia/: __init__.py
nedlia-sdk/swift/: README.md
tools/js/: README.md  prettier.config.js  tsconfig.base.json
tools/performance-tests/: README.md  pyproject.toml
tools/performance-tests/chaos/: backpressure_test.py  cold_start_test.py  conftest.py  idempotency_test.py
tools/performance-tests/consistency/: conftest.py  consistency_test.py
tools/performance-tests/k6/: load-test.js  soak-test.js  spike-test.js  stress-test.js
tools/performance-tests/producers/: event_producer.py
tools/performance-tests/src/nedlia_performance_tests/: __init__.py
tools/python/: README.md  mypy.ini  pyproject.toml  ruff.toml
tools/security/: .gitleaks.toml  README.md
