[project]
name = "nedlia-shared"
version = "0.1.0"
description = "Shared domain models and utilities"
requires-python = ">=3.11"
dependencies = [
    # Validation
    # "pydantic>=2.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nedlia_shared"]

[tool.ruff]
extend = "../../tools/python/ruff.toml"
