[project]
name = "nedlia-workers"
version = "0.1.0"
description = "Nedlia background workers"
requires-python = ">=3.11"
dependencies = [
    # Shared domain
    # "nedlia-shared",
    # AWS
    # "boto3>=1.34.0",
    # Task queue (choose one)
    # "arq>=0.25.0",  # Redis-based
    # "dramatiq>=1.15.0",  # RabbitMQ/Redis
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.8.0",
    "mypy>=1.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nedlia_workers"]

[tool.ruff]
extend = "../../tools/python/ruff.toml"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["src"]
