[project]
name = "nedlia"
version = "0.1.0"
description = "Nedlia Python SDK"
requires-python = ">=3.9"
dependencies = [
    # "httpx>=0.26.0",
    # "pydantic>=2.5.0",
]

[project.optional-dependencies]
dev = [
    # "pytest>=8.0.0",
    # "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nedlia"]

[tool.ruff]
extend = "../../tools/python/ruff.toml"
