[project]
name = "nedlia-performance-tests"
version = "0.1.0"
description = "Performance testing suite for Nedlia"
requires-python = ">=3.11"
dependencies = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.26.0",
    "boto3>=1.34.0",
    "asyncpg>=0.29.0",
    "structlog>=24.1.0",
    "rich>=13.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["consistency", "chaos"]
